--- a/travis.yml
+++ b/travis.yml
@@ -1,13 +1,22 @@
-jobs:
-  include:
-    - stage: check_pep8
-      language: python
-      python: 3.10
-      before_install:
-        python -m pip install --upgrade pip
-        pip install flake8
-        if [-f requirements.txt ]; then pip install -r requirements.txt; fi
+name:flake8 check
+on:push
 
-      script:
-        "flake8"
-        - #здесь должен быть некоторый код, проверяющий с flake8 все скрипты с расширением .py, если есть ошибки - возвращается false
+jobs:
+  lint:
+     runs-on: ubuntu-latest
+     steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+        - name: Set python
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.10'
+        - name: install start requirements.txt 
+          run: |
+            python -m pip install --upgrade pip
+            pip install flake8
+            if [-f requirements.txt ]; then pip install -r requirements.txt; fi
+        - name:flake8 code check 
+          run: | 
+            find . -type f -name "*.py" -print0 | xargs -0 flake8
+
